--- a/getinvolved.html
+++ b/getinvolved.html
@@ -38,6 +38,19 @@
           <li><a href="getinvolved.html">Contact</a></li>
         </ul>
       </nav>
+      <div class="heading">
+        <h1>Get Involved</h1>
+        <h2>Support</h2>
+        <p>
+          There are various ways you can support the museum. Donations are very welcome and are an important way we keep this museum open and accessible to the
+          whole community.
+        </p>
+        <p>
+          You can also support us by donating items of interest to the museum’s collections. If you have some item or collection that you think others would
+          enjoy, please let us know by contacting our Collections Department and they will be able to assist you.
+        </p>
+        <img src="images/learn.jpg" class="heading-img" />
+      </div>
     </header>
   </body>
   <main></main>
