added html content

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -38,6 +38,20 @@
           <li><a href="getinvolved.html">Contact</a></li>
         </ul>
       </nav>
+      <div class="heading">
+        <h1>“Exhibition Spaces”</h1>
+        <h2>Cosmology</h2>
+        <p>
+          Explore the wonders of our cosmos. Our fantastic exhibition, ‘The Sky Above Us’, explores the night sky and what we can see and know about the
+          universe around us. We’ll locate the various constellations and galaxies that can be seen and learn a bit about the early navigators who used the
+          stars to travel by.
+        </p>
+        <p>
+          Follow the journey of our solar exploration: from early Arab traders, to Galileo’s telescope, to the latest exploration of the planets in our solar
+          system.
+        </p>
+        <img src="images/cosmos.jpg" class="heading-img" />
+      </div>
     </header>
   </body>
   <main></main>
