--- a/visit.html
+++ b/visit.html
@@ -38,6 +38,14 @@
           <li><a href="getinvolved.html">Contact</a></li>
         </ul>
       </nav>
+      <div class="heading">
+        <h1>Visit</h1>
+        <h2>Location</h2>
+        <p>The museum is located at [student to include address].</p>
+        <h2>Admission</h2>
+        <p>The entrance is free for all.</p>
+        <img src="images/museum.jpg" class="heading-img" />
+      </div>
     </header>
   </body>
   <main></main>
