added html content

--- a/getinvolved.html
+++ b/getinvolved.html
@@ -52,24 +52,57 @@
         <img src="images/learn.jpg" class="heading-img" />
       </div>
     </header>
+    <main>
+      <section>
+        <div class="card">
+          <h2>Volunteer</h2>
+          <p>
+            A number of people volunteer their time and effort to keep the displays in good order and ready for visitors to come and enjoy. Volunteering has its
+            perks including getting to see behind the scenes of a working museum, access to staff-only lectures, and a monthly lunch where all staff and
+            volunteers come together to discuss ideas for future exhibits and strategies for the museum.
+          </p>
+          <p>You can help volunteer in a number of different spheres. Please contact us if you’d like to find out more about how you can get involved.</p>
+          <img src="images/vrexperience.jpg" class="img" />
+        </div>
+        <div>
+          <h2>Internships</h2>
+          <img src="images/puzzle.jpg" class="img" />
+          <p>
+            Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing the wonders of nature with people? Well you could be just
+            the right person to enjoy an internship at the museum.
+          </p>
+          <p>You’ll be learning from a number of different academics and people who are passionate about science and sharing it with the wider community.</p>
+        </div>
+        <div>
+          <h2>Contact</h2>
+          <p>If you want to get in touch, please fill out form, and we will get back to you shortly.</p>
+          <form method="POST" class="contact-card">
+            <label for="email">Email</label>
+            <input type="email" />
+            <label for="textarea">Message</label>
+            <textarea label="Message"></textarea>
+            <input type="submit" class="cta" value="Send" />
+          </form>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <li><a href="explore.html">Explore</a></li>
+      <li><a href="explore.html">For kids</a></li>
+      <li><a href="explore.html">For teachers</a></li>
+      <li><a href="explore.html">Researchers</a></li>
+      <li><a href="exhibitions.html">Exhibitions</a></li>
+      <li><a href="exhibitions.html">Cosmology</a></li>
+      <li><a href="exhibitions.html">Evolution</a></li>
+      <li><a href="exhibitions.html">Biology and Medicine</a></li>
+      <li><a href="exhibitions.html">Robotics and AI</a></li>
+      <li><a href="exhibitions.html">Ecology</a></li>
+      <li><a href="visit.html">Visit</a></li>
+      <li><a href="getinvolved.html">Get Involved</a></li>
+      <li><a href="getinvolved.html">Support</a></li>
+      <li><a href="getinvolved.html">Volunteer</a></li>
+      <li><a href="getinvolved.html">Internships</a></li>
+      <li><a href="getinvolved.html">Contact</a></li>
+    </footer>
   </body>
-  <main></main>
-  <footer>
-    <li><a href="explore.html">Explore</a></li>
-    <li><a href="explore.html">For kids</a></li>
-    <li><a href="explore.html">For teachers</a></li>
-    <li><a href="explore.html">Researchers</a></li>
-    <li><a href="exhibitions.html">Exhibitions</a></li>
-    <li><a href="exhibitions.html">Cosmology</a></li>
-    <li><a href="exhibitions.html">Evolution</a></li>
-    <li><a href="exhibitions.html">Biology and Medicine</a></li>
-    <li><a href="exhibitions.html">Robotics and AI</a></li>
-    <li><a href="exhibitions.html">Ecology</a></li>
-    <li><a href="visit.html">Visit</a></li>
-    <li><a href="getinvolved.html">Get Involved</a></li>
-    <li><a href="getinvolved.html">Support</a></li>
-    <li><a href="getinvolved.html">Volunteer</a></li>
-    <li><a href="getinvolved.html">Internships</a></li>
-    <li><a href="getinvolved.html">Contact</a></li>
-  </footer>
 </html>
