--- a/exhibitions.html
+++ b/exhibitions.html
@@ -53,24 +53,75 @@
         <img src="images/cosmos.jpg" class="heading-img" />
       </div>
     </header>
+    <main>
+      <section>
+        <div class="card">
+          <h2>Evolution</h2>
+          <p>
+            For centuries, philosophers and scientists have wrestled with the question of our origins. Where do we come from and how did we get here? Since
+            Darwin proposed his theory of evolution we have had a framework for exploring and understanding our place in this world.
+          </p>
+          <p>
+            Discover the origins of life on this planet and how the species we know today have evolved our time. You can also take some time to meet a few of
+            the creatures who didn’t survive, including our Woolly Mammoth, the Dodos, and a number of dinosaurs too.
+          </p>
+          <img src="images/skeletons.jpg" class="img" />
+        </div>
+        <div class="card">
+          <h2>Biology and Medicine</h2>
+          <img src="images/biologystatue.jpg" class="img" />
+          <p>
+            From micro-organisms to the human body, major breakthroughs in biology are offering us unique insights into the great wonders of the tiny world.
+          </p>
+          <p>
+            For many people their life expectancy is much longer and their quality of life much improved, thanks to the growth of our understanding of medicine.
+            Over a series of exhibits we explore the history of medicine and take a look at some major breakthroughs including the discovery of penicillin and
+            the first heart transplant.
+          </p>
+          <p>
+            Many of our great medicinal discoveries have come not only from the lab, but also from observing animals in the wild. Often our fellow creatures
+            have beat us to it.
+          </p>
+        </div>
+        <div class="card">
+          <img src="images/giantant.jpg" class="img" />
+          <h2>Robotics and AI</h2>
+          <p>
+            The information revolution is here and robotics and artificial intelligence are the science of the future. From useful home applications of AI to
+            industrial uses of robotics, the future is here. You can even say hello and shake the hand of Rob the Robot.
+          </p>
+        </div>
+        <div>
+          <img src="images/web.jpg" class="img" />
+          <h2>Ecology</h2>
+          <p>
+            As we learn more and more of the impact humans are having on the planet, the more important it becomes that scientists explore how to create a
+            sustainable future not just for humans but for the whole planet.
+          </p>
+          <p>
+            In our ecology section of the museum, we unpack the dangers we currently face including global warming, extinction of species, and pollution. But we
+            also focus on the positive ways we can all contribute to a brighter future.
+          </p>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <li><a href="explore.html">Explore</a></li>
+      <li><a href="explore.html">For kids</a></li>
+      <li><a href="explore.html">For teachers</a></li>
+      <li><a href="explore.html">Researchers</a></li>
+      <li><a href="exhibitions.html">Exhibitions</a></li>
+      <li><a href="exhibitions.html">Cosmology</a></li>
+      <li><a href="exhibitions.html">Evolution</a></li>
+      <li><a href="exhibitions.html">Biology and Medicine</a></li>
+      <li><a href="exhibitions.html">Robotics and AI</a></li>
+      <li><a href="exhibitions.html">Ecology</a></li>
+      <li><a href="visit.html">Visit</a></li>
+      <li><a href="getinvolved.html">Get Involved</a></li>
+      <li><a href="getinvolved.html">Support</a></li>
+      <li><a href="getinvolved.html">Volunteer</a></li>
+      <li><a href="getinvolved.html">Internships</a></li>
+      <li><a href="getinvolved.html">Contact</a></li>
+    </footer>
   </body>
-  <main></main>
-  <footer>
-    <li><a href="explore.html">Explore</a></li>
-    <li><a href="explore.html">For kids</a></li>
-    <li><a href="explore.html">For teachers</a></li>
-    <li><a href="explore.html">Researchers</a></li>
-    <li><a href="exhibitions.html">Exhibitions</a></li>
-    <li><a href="exhibitions.html">Cosmology</a></li>
-    <li><a href="exhibitions.html">Evolution</a></li>
-    <li><a href="exhibitions.html">Biology and Medicine</a></li>
-    <li><a href="exhibitions.html">Robotics and AI</a></li>
-    <li><a href="exhibitions.html">Ecology</a></li>
-    <li><a href="visit.html">Visit</a></li>
-    <li><a href="getinvolved.html">Get Involved</a></li>
-    <li><a href="getinvolved.html">Support</a></li>
-    <li><a href="getinvolved.html">Volunteer</a></li>
-    <li><a href="getinvolved.html">Internships</a></li>
-    <li><a href="getinvolved.html">Contact</a></li>
-  </footer>
 </html>
