--- a/explore.html
+++ b/explore.html
@@ -66,7 +66,7 @@
             </p>
             <img src="images/teacher.jpg" class="img" />
             <p>
-                Please get in touch with us here to find out more about our facilities and to arrange a time to bring your students through for a visit.
+                Please get in touch with us <a href="getinvolved.html">here</a> to find out more about our facilities and to arrange a time to bring your students through for a visit.
             </p>
            </div>
            <div class="card">
