--- a/visit.html
+++ b/visit.html
@@ -47,24 +47,57 @@
         <img src="images/museum.jpg" class="heading-img" />
       </div>
     </header>
+    <main>
+      <section>
+        <div class="card">
+          <p>There are guided tours of the museum that leave every hour. These tours are 70 NOK per person and include a handy printed guide of the museum.</p>
+          <p>
+            If you would like to organise a guided tour for your group of 6 or more people, please <a href="getinvolved.html">contact</a> us to arrange the
+            tour.
+          </p>
+          <img src="images/lobby.jpg" class="img" />
+        </div>
+        <div class="card">
+          <h2>Hours</h2>
+          <p>Monday: Closed</p>
+          <p>Tuesday: 10:00 – 16:00</p>
+          <p>Wednesday: 10:00 – 16:00</p>
+          <p>Thursday: 10:00 – 16:00</p>
+          <p>Friday: 10:00 – 19:00</p>
+          <p>Saturday: 9:00 – 16:00</p>
+          <p>Sunday: 9:00 – 13:00</p>
+          <img src="images/library.jpg" />
+        </div>
+        <div class="card">
+          <h2>Accessibility</h2>
+          <p>The museum has wheelchair accessibility ramps. It also has audio guides and braille display signs for the visually impaired.</p>
+          <h2>Food and Drink</h2>
+          <p>There is a café attached to the museum where you can get light lunches, soft drinks, coffee, snacks and more.</p>
+          <h2>Shop</h2>
+          <p>
+            Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to continue to explore science even
+            after you’ve left the museum.
+          </p>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <li><a href="explore.html">Explore</a></li>
+      <li><a href="explore.html">For kids</a></li>
+      <li><a href="explore.html">For teachers</a></li>
+      <li><a href="explore.html">Researchers</a></li>
+      <li><a href="exhibitions.html">Exhibitions</a></li>
+      <li><a href="exhibitions.html">Cosmology</a></li>
+      <li><a href="exhibitions.html">Evolution</a></li>
+      <li><a href="exhibitions.html">Biology and Medicine</a></li>
+      <li><a href="exhibitions.html">Robotics and AI</a></li>
+      <li><a href="exhibitions.html">Ecology</a></li>
+      <li><a href="visit.html">Visit</a></li>
+      <li><a href="getinvolved.html">Get Involved</a></li>
+      <li><a href="getinvolved.html">Support</a></li>
+      <li><a href="getinvolved.html">Volunteer</a></li>
+      <li><a href="getinvolved.html">Internships</a></li>
+      <li><a href="getinvolved.html">Contact</a></li>
+    </footer>
   </body>
-  <main></main>
-  <footer>
-    <li><a href="explore.html">Explore</a></li>
-    <li><a href="explore.html">For kids</a></li>
-    <li><a href="explore.html">For teachers</a></li>
-    <li><a href="explore.html">Researchers</a></li>
-    <li><a href="exhibitions.html">Exhibitions</a></li>
-    <li><a href="exhibitions.html">Cosmology</a></li>
-    <li><a href="exhibitions.html">Evolution</a></li>
-    <li><a href="exhibitions.html">Biology and Medicine</a></li>
-    <li><a href="exhibitions.html">Robotics and AI</a></li>
-    <li><a href="exhibitions.html">Ecology</a></li>
-    <li><a href="visit.html">Visit</a></li>
-    <li><a href="getinvolved.html">Get Involved</a></li>
-    <li><a href="getinvolved.html">Support</a></li>
-    <li><a href="getinvolved.html">Volunteer</a></li>
-    <li><a href="getinvolved.html">Internships</a></li>
-    <li><a href="getinvolved.html">Contact</a></li>
-  </footer>
 </html>
