--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </ul>
           </nav>
           <div class="heading">
-            <img src="images/moonphases.jpg" class="heading-img" />
+            <img src="images/milkyway.jpg" class="heading-img" />
             <h1>“Explore together”</h1>
             <p>Come join us at the Community Science Museum where we’re committed to making science accessible to all.</p>
             <a href="exhibitions.html" class="cta">Exhibitions</a>
