small contactlink addition

--- a/getinvolved.html
+++ b/getinvolved.html
@@ -61,7 +61,10 @@
             perks including getting to see behind the scenes of a working museum, access to staff-only lectures, and a monthly lunch where all staff and
             volunteers come together to discuss ideas for future exhibits and strategies for the museum.
           </p>
-          <p>You can help volunteer in a number of different spheres. Please contact us if you’d like to find out more about how you can get involved.</p>
+          <p>
+            You can help volunteer in a number of different spheres. Please <a href="getinvolved.html">contact</a> us if you’d like to find out more about how
+            you can get involved.
+          </p>
           <img src="images/vrexperience.jpg" class="img" />
         </div>
         <div>
