added some basic css rules, colors and minor rules

--- a/explore.html
+++ b/explore.html
@@ -18,6 +18,7 @@
       <a href="index.html">Community Science Museum</a>
       <input type="checkbox" id="hamburger"/>
       <label for="hamburger"><i class="fas fa-bars"></i></label>
+    </header>   
       <nav class="navigation">
         <ul>
             <li><a href="explore.html">Explore</a></li>
@@ -35,10 +36,11 @@
             <li><a href="getinvolved.html">Support</a></li>
             <li><a href="getinvolved.html">Volunteer</a></li>
             <li><a href="getinvolved.html">Internships</a></li>
-            <li><a href="getinvolved.html">Contact</a></li> 
+            <li><a href="getinvolved.html">Contact</a></li>
+            <li><a href="getinvolved.html">Visit</a></li>
         </ul>
       </nav>
-        <div class="heading">
+        <section class="heading">
             <h1>Explore</h1>
             <h2>For kids</h2>
                 <p>Are you a young person looking to learn more about science? Come on down to our museum, there’s plenty to see and do. 
@@ -49,12 +51,12 @@
                  We also have the Young Stars club which meets once a week on a Saturday between 10:00 and 13:00 where you’ll get to explore and experiment with our team of experts.
                 </p>
                 <img src="images/scientific.jpg" class="heading-img" />
-        </div>
-         <p>
-          During the school holidays we run special holiday clubs where you can join other children your age to go on a journey of discovery. 
-          Each holiday we pick a new theme to explore. To find out more about the holiday club and how you can join, send us a message.
-         </p>
-    </header>
+         </div>
+          <p>
+           During the school holidays we run special holiday clubs where you can join other children your age to go on a journey of discovery. 
+           Each holiday we pick a new theme to explore. To find out more about the holiday club and how you can join, send us a message.
+          </p>
+        </section>
     </body>
         <main>
         <section>
