--- a/getinvolved.html
+++ b/getinvolved.html
@@ -18,40 +18,41 @@
       <a href="index.html">Community Science Museum</a>
       <input type="checkbox" id="hamburger" />
       <label for="hamburger"><i class="fas fa-bars"></i></label>
-      <nav class="navigation">
-        <ul>
-          <li><a href="explore.html">Explore</a></li>
-          <li><a href="explore.html">For kids</a></li>
-          <li><a href="explore.html">For teachers</a></li>
-          <li><a href="explore.html">Researchers</a></li>
-          <li><a href="exhibitions.html">Exhibitions</a></li>
-          <li><a href="exhibitions.html">Cosmology</a></li>
-          <li><a href="exhibitions.html">Evolution</a></li>
-          <li><a href="exhibitions.html">Biology and Medicine</a></li>
-          <li><a href="exhibitions.html">Robotics and AI</a></li>
-          <li><a href="exhibitions.html">Ecology</a></li>
-          <li><a href="visit.html">Visit</a></li>
-          <li><a href="getinvolved.html">Get Involved</a></li>
-          <li><a href="getinvolved.html">Support</a></li>
-          <li><a href="getinvolved.html">Volunteer</a></li>
-          <li><a href="getinvolved.html">Internships</a></li>
-          <li><a href="getinvolved.html">Contact</a></li>
-        </ul>
-      </nav>
-      <div class="heading">
-        <h1>Get Involved</h1>
-        <h2>Support</h2>
-        <p>
-          There are various ways you can support the museum. Donations are very welcome and are an important way we keep this museum open and accessible to the
-          whole community.
-        </p>
-        <p>
-          You can also support us by donating items of interest to the museum’s collections. If you have some item or collection that you think others would
-          enjoy, please let us know by contacting our Collections Department and they will be able to assist you.
-        </p>
-        <img src="images/learn.jpg" class="heading-img" />
-      </div>
     </header>
+    <nav class="navigation">
+      <ul>
+        <li><a href="explore.html">Explore</a></li>
+        <li><a href="explore.html">For kids</a></li>
+        <li><a href="explore.html">For teachers</a></li>
+        <li><a href="explore.html">Researchers</a></li>
+        <li><a href="exhibitions.html">Exhibitions</a></li>
+        <li><a href="exhibitions.html">Cosmology</a></li>
+        <li><a href="exhibitions.html">Evolution</a></li>
+        <li><a href="exhibitions.html">Biology and Medicine</a></li>
+        <li><a href="exhibitions.html">Robotics and AI</a></li>
+        <li><a href="exhibitions.html">Ecology</a></li>
+        <li><a href="visit.html">Visit</a></li>
+        <li><a href="getinvolved.html">Get Involved</a></li>
+        <li><a href="getinvolved.html">Support</a></li>
+        <li><a href="getinvolved.html">Volunteer</a></li>
+        <li><a href="getinvolved.html">Internships</a></li>
+        <li><a href="getinvolved.html">Contact</a></li>
+        <li><a href="getinvolved.html">Visit</a></li>
+      </ul>
+    </nav>
+    <section class="heading">
+      <h1>Get Involved</h1>
+      <h2>Support</h2>
+      <p>
+        There are various ways you can support the museum. Donations are very welcome and are an important way we keep this museum open and accessible to the
+        whole community.
+      </p>
+      <p>
+        You can also support us by donating items of interest to the museum’s collections. If you have some item or collection that you think others would
+        enjoy, please let us know by contacting our Collections Department and they will be able to assist you.
+      </p>
+      <img src="images/learn.jpg" class="heading-img" />
+    </section>
     <main>
       <section>
         <div class="card">
