--- a/exhibitions.html
+++ b/exhibitions.html
@@ -18,41 +18,42 @@
       <a href="index.html">Community Science Museum</a>
       <input type="checkbox" id="hamburger" />
       <label for="hamburger"><i class="fas fa-bars"></i></label>
-      <nav class="navigation">
-        <ul>
-          <li><a href="explore.html">Explore</a></li>
-          <li><a href="explore.html">For kids</a></li>
-          <li><a href="explore.html">For teachers</a></li>
-          <li><a href="explore.html">Researchers</a></li>
-          <li><a href="exhibitions.html">Exhibitions</a></li>
-          <li><a href="exhibitions.html">Cosmology</a></li>
-          <li><a href="exhibitions.html">Evolution</a></li>
-          <li><a href="exhibitions.html">Biology and Medicine</a></li>
-          <li><a href="exhibitions.html">Robotics and AI</a></li>
-          <li><a href="exhibitions.html">Ecology</a></li>
-          <li><a href="visit.html">Visit</a></li>
-          <li><a href="getinvolved.html">Get Involved</a></li>
-          <li><a href="getinvolved.html">Support</a></li>
-          <li><a href="getinvolved.html">Volunteer</a></li>
-          <li><a href="getinvolved.html">Internships</a></li>
-          <li><a href="getinvolved.html">Contact</a></li>
-        </ul>
-      </nav>
-      <div class="heading">
-        <h1>“Exhibition Spaces”</h1>
-        <h2>Cosmology</h2>
-        <p>
-          Explore the wonders of our cosmos. Our fantastic exhibition, ‘The Sky Above Us’, explores the night sky and what we can see and know about the
-          universe around us. We’ll locate the various constellations and galaxies that can be seen and learn a bit about the early navigators who used the
-          stars to travel by.
-        </p>
-        <p>
-          Follow the journey of our solar exploration: from early Arab traders, to Galileo’s telescope, to the latest exploration of the planets in our solar
-          system.
-        </p>
-        <img src="images/cosmos.jpg" class="heading-img" />
-      </div>
     </header>
+    <nav class="navigation">
+      <ul>
+        <li><a href="explore.html">Explore</a></li>
+        <li><a href="explore.html">For kids</a></li>
+        <li><a href="explore.html">For teachers</a></li>
+        <li><a href="explore.html">Researchers</a></li>
+        <li><a href="exhibitions.html">Exhibitions</a></li>
+        <li><a href="exhibitions.html">Cosmology</a></li>
+        <li><a href="exhibitions.html">Evolution</a></li>
+        <li><a href="exhibitions.html">Biology and Medicine</a></li>
+        <li><a href="exhibitions.html">Robotics and AI</a></li>
+        <li><a href="exhibitions.html">Ecology</a></li>
+        <li><a href="visit.html">Visit</a></li>
+        <li><a href="getinvolved.html">Get Involved</a></li>
+        <li><a href="getinvolved.html">Support</a></li>
+        <li><a href="getinvolved.html">Volunteer</a></li>
+        <li><a href="getinvolved.html">Internships</a></li>
+        <li><a href="getinvolved.html">Contact</a></li>
+        <li><a href="getinvolved.html">Visit</a></li>
+      </ul>
+    </nav>
+    <section class="heading">
+      <h1>“Exhibition Spaces”</h1>
+      <h2>Cosmology</h2>
+      <p>
+        Explore the wonders of our cosmos. Our fantastic exhibition, ‘The Sky Above Us’, explores the night sky and what we can see and know about the universe
+        around us. We’ll locate the various constellations and galaxies that can be seen and learn a bit about the early navigators who used the stars to travel
+        by.
+      </p>
+      <p>
+        Follow the journey of our solar exploration: from early Arab traders, to Galileo’s telescope, to the latest exploration of the planets in our solar
+        system.
+      </p>
+      <img src="images/cosmos.jpg" class="heading-img" />
+    </section>
     <main>
       <section>
         <div class="card">
