--- a/visit.html
+++ b/visit.html
@@ -18,35 +18,36 @@
       <a href="index.html">Community Science Museum</a>
       <input type="checkbox" id="hamburger" />
       <label for="hamburger"><i class="fas fa-bars"></i></label>
-      <nav class="navigation">
-        <ul>
-          <li><a href="explore.html">Explore</a></li>
-          <li><a href="explore.html">For kids</a></li>
-          <li><a href="explore.html">For teachers</a></li>
-          <li><a href="explore.html">Researchers</a></li>
-          <li><a href="exhibitions.html">Exhibitions</a></li>
-          <li><a href="exhibitions.html">Cosmology</a></li>
-          <li><a href="exhibitions.html">Evolution</a></li>
-          <li><a href="exhibitions.html">Biology and Medicine</a></li>
-          <li><a href="exhibitions.html">Robotics and AI</a></li>
-          <li><a href="exhibitions.html">Ecology</a></li>
-          <li><a href="visit.html">Visit</a></li>
-          <li><a href="getinvolved.html">Get Involved</a></li>
-          <li><a href="getinvolved.html">Support</a></li>
-          <li><a href="getinvolved.html">Volunteer</a></li>
-          <li><a href="getinvolved.html">Internships</a></li>
-          <li><a href="getinvolved.html">Contact</a></li>
-        </ul>
-      </nav>
-      <div class="heading">
-        <h1>Visit</h1>
-        <h2>Location</h2>
-        <p>The museum is located at [student to include address].</p>
-        <h2>Admission</h2>
-        <p>The entrance is free for all.</p>
-        <img src="images/museum.jpg" class="heading-img" />
-      </div>
     </header>
+    <nav class="navigation">
+      <ul>
+        <li><a href="explore.html">Explore</a></li>
+        <li><a href="explore.html">For kids</a></li>
+        <li><a href="explore.html">For teachers</a></li>
+        <li><a href="explore.html">Researchers</a></li>
+        <li><a href="exhibitions.html">Exhibitions</a></li>
+        <li><a href="exhibitions.html">Cosmology</a></li>
+        <li><a href="exhibitions.html">Evolution</a></li>
+        <li><a href="exhibitions.html">Biology and Medicine</a></li>
+        <li><a href="exhibitions.html">Robotics and AI</a></li>
+        <li><a href="exhibitions.html">Ecology</a></li>
+        <li><a href="visit.html">Visit</a></li>
+        <li><a href="getinvolved.html">Get Involved</a></li>
+        <li><a href="getinvolved.html">Support</a></li>
+        <li><a href="getinvolved.html">Volunteer</a></li>
+        <li><a href="getinvolved.html">Internships</a></li>
+        <li><a href="getinvolved.html">Contact</a></li>
+        <li><a href="getinvolved.html">Visit</a></li>
+      </ul>
+    </nav>
+    <section class="heading">
+      <h1>Visit</h1>
+      <h2>Location</h2>
+      <p>The museum is located at [student to include address].</p>
+      <h2>Admission</h2>
+      <p>The entrance is free for all.</p>
+      <img src="images/museum.jpg" class="heading-img" />
+    </section>
     <main>
       <section>
         <div class="card">
