--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
     </nav>
     <main>
       <section class="heading-index">
-        <h1>“Explore together”</h1>
+        <div class="type-wrapper">
+          <h1 class="type-h1">“Explore together”</h1>
+        </div>
         <p>Come join us at the Community Science Museum where we’re committed to making science accessible to all.</p>
         <a href="exhibitions.html" class="cta">Exhibitions</a>
       </section>
