changes to headings and minor tweaks

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <img src="images/scientific.jpg" />
           <h3>For kids</h3>
           <p>Are you a young person looking to learn more about science? Come on down to our museum, there’s plenty to see and do.</p>
-          <a href="explore.html" class="cta-card">Read more></a>
+          <a href="explore.html" class="cta-card">Read more</a>
         </div>
         <div class="main-card">
           <h2>Exhibitions</h2>
@@ -64,7 +64,7 @@
             Explore the wonders of our cosmos. Our fantastic exhibition, ‘The Sky Above Us’, explores the night sky and what we can see and know about the
             universe around us.
           </p>
-          <a href="exhibitions.html" class="cta-card">Read more></a>
+          <a href="exhibitions.html" class="cta-card">Read more</a>
         </div>
         <div class="main-card">
           <h2>Get involved</h2>
