--- a/exhibitions.html
+++ b/exhibitions.html
@@ -41,7 +41,7 @@
       </ul>
     </nav>
     <section class="heading">
-      <h1>“Exhibition Spaces”</h1>
+      <h1>Exhibition Spaces</h1>
       <h2>Cosmology</h2>
       <p>
         Explore the wonders of our cosmos. Our fantastic exhibition, ‘The Sky Above Us’, explores the night sky and what we can see and know about the universe
