added animation to index, not complete

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         </div>
         <p>Come join us at the Community Science Museum where we’re committed to making science accessible to all.</p>
         <a href="exhibitions.html" class="cta">Exhibitions</a>
+        <div class="arrow-down"></div>
       </section>
       <section>
         <div class="main-card">
