added animated arrow to all pages

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -53,6 +53,7 @@
         system.
       </p>
       <img src="images/cosmos.jpg" class="heading-img" />
+      <div class="arrow-down"></div>
     </section>
     <main>
       <section>
