--- a/getinvolved.html
+++ b/getinvolved.html
@@ -52,6 +52,7 @@
         enjoy, please let us know by contacting our Collections Department and they will be able to assist you.
       </p>
       <img src="images/learn.jpg" class="heading-img" />
+      <div class="arrow-down"></div>
     </section>
     <main>
       <section>
