--- a/visit.html
+++ b/visit.html
@@ -47,6 +47,7 @@
       <h2>Admission</h2>
       <p>The entrance is free for all.</p>
       <img src="images/museum.jpg" class="heading-img" />
+      <div class="arrow-down"></div>
     </section>
     <main>
       <section>
