--- a/explore.html
+++ b/explore.html
@@ -51,6 +51,7 @@
                  We also have the Young Stars club which meets once a week on a Saturday between 10:00 and 13:00 where you’ll get to explore and experiment with our team of experts.
                 </p>
                 <img src="images/scientific.jpg" class="heading-img" />
+                <div class="arrow-down"></div>
          </div>
           <p>
            During the school holidays we run special holiday clubs where you can join other children your age to go on a journey of discovery. 
