--- a/visit.html
+++ b/visit.html
@@ -84,22 +84,28 @@
       </section>
     </main>
     <footer>
-      <li><a href="explore.html">Explore</a></li>
-      <li><a href="explore.html">For kids</a></li>
-      <li><a href="explore.html">For teachers</a></li>
-      <li><a href="explore.html">Researchers</a></li>
-      <li><a href="exhibitions.html">Exhibitions</a></li>
-      <li><a href="exhibitions.html">Cosmology</a></li>
-      <li><a href="exhibitions.html">Evolution</a></li>
-      <li><a href="exhibitions.html">Biology and Medicine</a></li>
-      <li><a href="exhibitions.html">Robotics and AI</a></li>
-      <li><a href="exhibitions.html">Ecology</a></li>
-      <li><a href="visit.html">Visit</a></li>
-      <li><a href="getinvolved.html">Get Involved</a></li>
-      <li><a href="getinvolved.html">Support</a></li>
-      <li><a href="getinvolved.html">Volunteer</a></li>
-      <li><a href="getinvolved.html">Internships</a></li>
-      <li><a href="getinvolved.html">Contact</a></li>
+      <div class="column">
+        <li><a href="explore.html">Explore</a></li>
+        <li><a href="explore.html">For kids</a></li>
+        <li><a href="explore.html">For teachers</a></li>
+        <li><a href="explore.html">Researchers</a></li>
+      </div>
+      <div class="column">
+        <li><a href="exhibitions.html">Exhibitions</a></li>
+        <li><a href="exhibitions.html">Cosmology</a></li>
+        <li><a href="exhibitions.html">Evolution</a></li>
+        <li><a href="exhibitions.html">Biology and Medicine</a></li>
+        <li><a href="exhibitions.html">Robotics and AI</a></li>
+        <li><a href="exhibitions.html">Ecology</a></li>
+      </div>
+      <div class="column">
+        <li><a href="visit.html">Visit</a></li>
+        <li><a href="getinvolved.html">Get Involved</a></li>
+        <li><a href="getinvolved.html">Support</a></li>
+        <li><a href="getinvolved.html">Volunteer</a></li>
+        <li><a href="getinvolved.html">Internships</a></li>
+        <li><a href="getinvolved.html">Contact</a></li>
+      </div>
     </footer>
   </body>
 </html>
