--- a/index.html
+++ b/index.html
@@ -51,6 +51,37 @@
       </section>
       <section>
         <div class="main-card">
+          <h2>News</h2>
+          <img src="images/reading.jpg" />
+          <h3>Visiting Professor of Aeronautics</h3>
+          <p>
+            It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology will be delivering 3 lectures on the
+            development of aeronautics and where the future lies in this exciting ‘space’.
+          </p>
+          <a href="explore.html" class="cta-card">Read more</a>
+        </div>
+        <div class="main-card">
+          <h2>News</h2>
+          <img src="images/mammoth.jpg" />
+          <h3>Night in the Museum</h3>
+          <p>
+            Get your family together for an exciting night in the museum as you sleep over beside dinosaurs and science displays. Bring your own sleeping bag
+            and get ready to rough it as we go exploring the wonders of science.
+          </p>
+          <a href="explore.html" class="cta-card">Read more</a>
+        </div>
+        <div class="main-card">
+          <h2>News</h2>
+          <img src="images/moonphases.jpg" />
+          <h3>Energetica Exhibition on Loan</h3>
+          <p>
+            On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the Community Science Museum. It’s a series of
+            installations that allow visitors to experience the power of the elements as we harness them. From solar energy powering lighting, to ‘Wind Island’
+            that shows how turbines are able to use and control wind to create power.
+          </p>
+          <a href="explore.html" class="cta-card">Read more</a>
+        </div>
+        <div class="main-card">
           <h2>Explore</h2>
           <img src="images/scientific.jpg" />
           <h3>For kids</h3>
