added specified pageview hyperlinks

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -23,21 +23,20 @@
         <ul>
           <li><a href="explore.html">Explore</a></li>
           <li><a href="explore.html">For kids</a></li>
-          <li><a href="explore.html">For teachers</a></li>
-          <li><a href="explore.html">Researchers</a></li>
+          <li><a href="explore.html#teachers">For teachers</a></li>
+          <li><a href="explore.html#researchers">Researchers</a></li>
           <li><a href="exhibitions.html">Exhibitions</a></li>
           <li><a href="exhibitions.html">Cosmology</a></li>
-          <li><a href="exhibitions.html">Evolution</a></li>
-          <li><a href="exhibitions.html">Biology and Medicine</a></li>
-          <li><a href="exhibitions.html">Robotics and AI</a></li>
-          <li><a href="exhibitions.html">Ecology</a></li>
-          <li><a href="visit.html">Visit</a></li>
+          <li><a href="exhibitions.html#evolution#evolution">Evolution</a></li>
+          <li><a href="exhibitions.html#biologyandmedicine">Biology and Medicine</a></li>
+          <li><a href="exhibitions.html#roboticsandai">Robotics and AI</a></li>
+          <li><a href="exhibitions.html#ecology">Ecology</a></li>
           <li><a href="getinvolved.html">Get Involved</a></li>
           <li><a href="getinvolved.html">Support</a></li>
-          <li><a href="getinvolved.html">Volunteer</a></li>
-          <li><a href="getinvolved.html">Internships</a></li>
-          <li><a href="getinvolved.html">Contact</a></li>
-          <li><a href="getinvolved.html">Visit</a></li>
+          <li><a href="getinvolved.html#volunteer">Volunteer</a></li>
+          <li><a href="getinvolved.html#internships">Internships</a></li>
+          <li><a href="getinvolved.html#contact">Contact</a></li>
+          <li><a href="visit.html">Visit</a></li>
         </ul>
       </nav>
     </header>
@@ -58,7 +57,7 @@
     </section>
     <main>
       <section>
-        <div class="card">
+        <div class="card" id="evolution">
           <h2>Evolution</h2>
           <p>
             For centuries, philosophers and scientists have wrestled with the question of our origins. Where do we come from and how did we get here? Since
@@ -70,7 +69,7 @@
           </p>
           <img src="images/skeletons.jpg" class="img" />
         </div>
-        <div class="card">
+        <div class="card" id="biologyandmedicine">
           <h2>Biology and Medicine</h2>
           <img src="images/biologystatue.jpg" class="img" />
           <p>
@@ -86,7 +85,7 @@
             have beat us to it.
           </p>
         </div>
-        <div class="card">
+        <div class="card" id="roboticsandai">
           <img src="images/giantant.jpg" class="img" />
           <h2>Robotics and AI</h2>
           <p>
@@ -94,7 +93,7 @@
             industrial uses of robotics, the future is here. You can even say hello and shake the hand of Rob the Robot.
           </p>
         </div>
-        <div>
+        <div class="card" id="ecology">
           <img src="images/web.jpg" class="img" />
           <h2>Ecology</h2>
           <p>
