--- a/index.html
+++ b/index.html
@@ -23,21 +23,20 @@
         <ul>
           <li><a href="explore.html">Explore</a></li>
           <li><a href="explore.html">For kids</a></li>
-          <li><a href="explore.html">For teachers</a></li>
-          <li><a href="explore.html">Researchers</a></li>
+          <li><a href="explore.html#teachers">For teachers</a></li>
+          <li><a href="explore.html#researchers">Researchers</a></li>
           <li><a href="exhibitions.html">Exhibitions</a></li>
           <li><a href="exhibitions.html">Cosmology</a></li>
-          <li><a href="exhibitions.html">Evolution</a></li>
-          <li><a href="exhibitions.html">Biology and Medicine</a></li>
-          <li><a href="exhibitions.html">Robotics and AI</a></li>
-          <li><a href="exhibitions.html">Ecology</a></li>
-          <li><a href="visit.html">Visit</a></li>
+          <li><a href="exhibitions.html#evolution#evolution">Evolution</a></li>
+          <li><a href="exhibitions.html#biologyandmedicine">Biology and Medicine</a></li>
+          <li><a href="exhibitions.html#roboticsandai">Robotics and AI</a></li>
+          <li><a href="exhibitions.html#ecology">Ecology</a></li>
           <li><a href="getinvolved.html">Get Involved</a></li>
           <li><a href="getinvolved.html">Support</a></li>
-          <li><a href="getinvolved.html">Volunteer</a></li>
-          <li><a href="getinvolved.html">Internships</a></li>
-          <li><a href="getinvolved.html">Contact</a></li>
-          <li><a href="getinvolved.html">Visit</a></li>
+          <li><a href="getinvolved.html#volunteer">Volunteer</a></li>
+          <li><a href="getinvolved.html#internships">Internships</a></li>
+          <li><a href="getinvolved.html#contact">Contact</a></li>
+          <li><a href="visit.html">Visit</a></li>
         </ul>
       </nav>
     </header>
