--- a/explore.html
+++ b/explore.html
@@ -21,23 +21,22 @@
  
       <nav class="navigation">
         <ul>
-            <li><a href="explore.html">Explore</a></li>
-            <li><a href="explore.html">For kids</a></li>
-            <li><a href="explore.html">For teachers</a></li>
-            <li><a href="explore.html">Researchers</a></li>
-            <li><a href="exhibitions.html">Exhibitions</a></li>
-            <li><a href="exhibitions.html">Cosmology</a></li>
-            <li><a href="exhibitions.html">Evolution</a></li>
-            <li><a href="exhibitions.html">Biology and Medicine</a></li>
-            <li><a href="exhibitions.html">Robotics and AI</a></li>
-            <li><a href="exhibitions.html">Ecology</a></li>
-            <li><a href="visit.html">Visit</a></li>
-            <li><a href="getinvolved.html">Get Involved</a></li>
-            <li><a href="getinvolved.html">Support</a></li>
-            <li><a href="getinvolved.html">Volunteer</a></li>
-            <li><a href="getinvolved.html">Internships</a></li>
-            <li><a href="getinvolved.html">Contact</a></li>
-            <li><a href="getinvolved.html">Visit</a></li>
+          <li><a href="explore.html">Explore</a></li>
+          <li><a href="explore.html">For kids</a></li>
+          <li><a href="explore.html#teachers">For teachers</a></li>
+          <li><a href="explore.html#researchers">Researchers</a></li>
+          <li><a href="exhibitions.html">Exhibitions</a></li>
+          <li><a href="exhibitions.html">Cosmology</a></li>
+          <li><a href="exhibitions.html#evolution#evolution">Evolution</a></li>
+          <li><a href="exhibitions.html#biologyandmedicine">Biology and Medicine</a></li>
+          <li><a href="exhibitions.html#roboticsandai">Robotics and AI</a></li>
+          <li><a href="exhibitions.html#ecology">Ecology</a></li>
+          <li><a href="getinvolved.html">Get Involved</a></li>
+          <li><a href="getinvolved.html">Support</a></li>
+          <li><a href="getinvolved.html#volunteer">Volunteer</a></li>
+          <li><a href="getinvolved.html#internships">Internships</a></li>
+          <li><a href="getinvolved.html#contact">Contact</a></li>
+          <li><a href="visit.html">Visit</a></li>
         </ul>
       </nav>
     </header>  
@@ -62,7 +61,7 @@
     </body>
         <main>
         <section>
-           <div class="card"> 
+           <div class="card" id="teachers"> 
             <h2>For teachers</h2>
             <p>
                As a community-driven museum, we want to work with schools to create places of learning and exploring. 
@@ -73,7 +72,7 @@
                 Please get in touch with us <a href="getinvolved.html">here</a> to find out more about our facilities and to arrange a time to bring your students through for a visit.
             </p>
            </div>
-           <div class="card">
+           <div class="card" id="researchers">
             <h2>Researchers</h2>
             <img src="images/researcher.jpg" class="img"/>
             <p>
