--- a/getinvolved.html
+++ b/getinvolved.html
@@ -55,7 +55,7 @@
     </section>
     <main>
       <section>
-        <div class="card">
+        <div class="card" id="volunteer">
           <h2>Volunteer</h2>
           <p>
             A number of people volunteer their time and effort to keep the displays in good order and ready for visitors to come and enjoy. Volunteering has its
@@ -68,7 +68,7 @@
           </p>
           <img src="images/vrexperience.jpg" class="img" />
         </div>
-        <div>
+        <div class="card" id="internships">
           <h2>Internships</h2>
           <img src="images/puzzle.jpg" class="img" />
           <p>
@@ -77,7 +77,7 @@
           </p>
           <p>You’ll be learning from a number of different academics and people who are passionate about science and sharing it with the wider community.</p>
         </div>
-        <div>
+        <div id="contact">
           <h2>Contact</h2>
           <p>If you want to get in touch, please fill out form, and we will get back to you shortly.</p>
           <form method="POST" class="contact-card">
