aligning and justifyin content on desktop view

--- a/explore.html
+++ b/explore.html
@@ -21,22 +21,22 @@
  
       <nav class="navigation">
         <ul>
-          <li><a href="explore.html">Explore</a></li>
+          <li><a href="explore.html" class="nav-heading">Explore</a></li>
           <li><a href="explore.html">For kids</a></li>
           <li><a href="explore.html#teachers">For teachers</a></li>
           <li><a href="explore.html#researchers">Researchers</a></li>
-          <li><a href="exhibitions.html">Exhibitions</a></li>
+          <li><a href="exhibitions.html" class="nav-heading">Exhibitions</a></li>
           <li><a href="exhibitions.html">Cosmology</a></li>
           <li><a href="exhibitions.html#evolution#evolution">Evolution</a></li>
           <li><a href="exhibitions.html#biologyandmedicine">Biology and Medicine</a></li>
           <li><a href="exhibitions.html#roboticsandai">Robotics and AI</a></li>
           <li><a href="exhibitions.html#ecology">Ecology</a></li>
-          <li><a href="getinvolved.html">Get Involved</a></li>
+          <li><a href="getinvolved.html" class="nav-heading">Get Involved</a></li>
           <li><a href="getinvolved.html">Support</a></li>
           <li><a href="getinvolved.html#volunteer">Volunteer</a></li>
           <li><a href="getinvolved.html#internships">Internships</a></li>
           <li><a href="getinvolved.html#contact">Contact</a></li>
-          <li><a href="visit.html">Visit</a></li>
+          <li><a href="visit.html" class="nav-heading">Visit</a></li>
         </ul>
       </nav>
     </header>  
@@ -53,13 +53,15 @@
                 <img src="images/scientific.jpg" class="heading-img" />
                 <div class="arrow-down"></div>
          </div>
-          <p>
-           During the school holidays we run special holiday clubs where you can join other children your age to go on a journey of discovery. 
-           Each holiday we pick a new theme to explore. To find out more about the holiday club and how you can join, send us a message.
-          </p>
+          
         </section>
-    </body>
+        
+
         <main>
+          <p>
+            During the school holidays we run special holiday clubs where you can join other children your age to go on a journey of discovery. 
+            Each holiday we pick a new theme to explore. To find out more about the holiday club and how you can join, send us a <a href="getinvolved.html">message.</a>
+           </p> 
         <section>
            <div class="card" id="teachers"> 
             <h2>For teachers</h2>
