--- a/visit.html
+++ b/visit.html
@@ -20,22 +20,22 @@
       <label for="hamburger"><i class="fas fa-bars"></i></label>
       <nav class="navigation">
         <ul>
-          <li><a href="explore.html">Explore</a></li>
+          <li><a href="explore.html" class="nav-heading">Explore</a></li>
           <li><a href="explore.html">For kids</a></li>
           <li><a href="explore.html#teachers">For teachers</a></li>
           <li><a href="explore.html#researchers">Researchers</a></li>
-          <li><a href="exhibitions.html">Exhibitions</a></li>
+          <li><a href="exhibitions.html" class="nav-heading">Exhibitions</a></li>
           <li><a href="exhibitions.html">Cosmology</a></li>
           <li><a href="exhibitions.html#evolution#evolution">Evolution</a></li>
           <li><a href="exhibitions.html#biologyandmedicine">Biology and Medicine</a></li>
           <li><a href="exhibitions.html#roboticsandai">Robotics and AI</a></li>
           <li><a href="exhibitions.html#ecology">Ecology</a></li>
-          <li><a href="getinvolved.html">Get Involved</a></li>
+          <li><a href="getinvolved.html" class="nav-heading">Get Involved</a></li>
           <li><a href="getinvolved.html">Support</a></li>
           <li><a href="getinvolved.html#volunteer">Volunteer</a></li>
           <li><a href="getinvolved.html#internships">Internships</a></li>
           <li><a href="getinvolved.html#contact">Contact</a></li>
-          <li><a href="visit.html">Visit</a></li>
+          <li><a href="visit.html" class="nav-heading">Visit</a></li>
         </ul>
       </nav>
     </header>
