--- a/explore.html
+++ b/explore.html
@@ -22,20 +22,20 @@
       <nav class="navigation">
         <ul>
           <li><a href="explore.html" class="nav-heading">Explore</a></li>
-          <li><a href="explore.html">For kids</a></li>
-          <li><a href="explore.html#teachers">For teachers</a></li>
-          <li><a href="explore.html#researchers">Researchers</a></li>
+          <li><a href="explore.html" class="sub-heading">For kids</a></li>
+          <li><a href="explore.html#teachers" class="sub-heading">For teachers</a></li>
+          <li><a href="explore.html#researchers" class="sub-heading">Researchers</a></li>
           <li><a href="exhibitions.html" class="nav-heading">Exhibitions</a></li>
-          <li><a href="exhibitions.html">Cosmology</a></li>
-          <li><a href="exhibitions.html#evolution#evolution">Evolution</a></li>
-          <li><a href="exhibitions.html#biologyandmedicine">Biology and Medicine</a></li>
-          <li><a href="exhibitions.html#roboticsandai">Robotics and AI</a></li>
-          <li><a href="exhibitions.html#ecology">Ecology</a></li>
+          <li><a href="exhibitions.html" class="sub-heading">Cosmology</a></li>
+          <li><a href="exhibitions.html#evolution#evolution" class="sub-heading">Evolution</a></li>
+          <li><a href="exhibitions.html#biologyandmedicine" class="sub-heading">Biology and Medicine</a></li>
+          <li><a href="exhibitions.html#roboticsandai" class="sub-heading">Robotics and AI</a></li>
+          <li><a href="exhibitions.html#ecology" class="sub-heading">Ecology</a></li>
           <li><a href="getinvolved.html" class="nav-heading">Get Involved</a></li>
-          <li><a href="getinvolved.html">Support</a></li>
-          <li><a href="getinvolved.html#volunteer">Volunteer</a></li>
-          <li><a href="getinvolved.html#internships">Internships</a></li>
-          <li><a href="getinvolved.html#contact">Contact</a></li>
+          <li><a href="getinvolved.html" class="sub-heading">Support</a></li>
+          <li><a href="getinvolved.html#volunteer" class="sub-heading">Volunteer</a></li>
+          <li><a href="getinvolved.html#internships" class="sub-heading">Internships</a></li>
+          <li><a href="getinvolved.html#contact" class="sub-heading">Contact</a></li>
           <li><a href="visit.html" class="nav-heading">Visit</a></li>
         </ul>
       </nav>
@@ -84,7 +84,8 @@
             </p>
            </div>
            <div class="card">
-            <img src="images/spacesuit.jpg" class="img">
+            <img src="images/spacesuit.jpg" class="img1" id="">
+            <img src="images/vrexperiencekid.jpg" class="img2" id="">
             <p>The aim of our museum is to create a space where everyone can experience the wonders of our discoveries and perhaps even ignite a lifelong passion to continue the exploration of the world around us.</p>
             <p>Over the course of human history, science has developed from our early understanding of fire, wind, water, and earth to exploring everything from galaxies far away to the very building blocks of life itself.</p>
            </div>
