--- a/index.html
+++ b/index.html
@@ -107,16 +107,25 @@
           </p>
           <a href="getinvolved.html" class="cta-card">Read more</a>
         </div>
-        <div class="main-card">
-          <img src="images/exhibits.jpg" />
-          <p>
-            We believe science should not be confined to the textbook, but brought to live through exhibits. This is why we have over 1000 different exhibits on
-            the many varied subjects of science to explore. Many of these exhibits are designed for you to interact with and play around to see science come to
-            life (apart from the dinosaur exhibits – they only come to life at night when everyone’s gone home).
-          </p>
-          <a href="visit.html" class="cta-card">Visit us</a>
-        </div>
       </section>
+      <div class="main-card" id="exhibits">
+        <img src="images/exhibits.jpg" class="img1-1" />
+        <p class="desktop-p1">
+          We believe science should not be confined to the textbook, but brought to live through exhibits. This is why we have over 1000 different exhibits on
+          the many varied subjects of science to explore. Many of these exhibits are designed for you to interact with and play around to see science come to
+          life (apart from the dinosaur exhibits – they only come to life at night when everyone’s gone home).
+        </p>
+        <p class="desktop-p2">
+          The aim of our museum is to create a space where everyone can experience the wonders of our discoveries and perhaps even ignite a lifelong passion to
+          continue the exploration of the world around us.
+        </p>
+        <p class="desktop-p3">
+          Over the course of human history, science has developed from our early understanding of fire, wind, water, and earth to exploring everything from
+          galaxies far away to the very building blocks of life itself.
+        </p>
+        <a href="visit.html" class="cta-card">Visit us</a>
+        <img src="images/spacesuit.jpg" class="img2" />
+      </div>
     </main>
     <footer>
       <div class="column">
