--- a/visit.html
+++ b/visit.html
@@ -51,6 +51,7 @@
     <main>
       <section>
         <div class="card">
+          <h2>Tours</h2>
           <p>There are guided tours of the museum that leave every hour. These tours are 70 NOK per person and include a handy printed guide of the museum.</p>
           <p>
             If you would like to organise a guided tour for your group of 6 or more people, please <a href="getinvolved.html">contact</a> us to arrange the
@@ -79,6 +80,7 @@
             Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to continue to explore science even
             after you’ve left the museum.
           </p>
+          <img src="images/hallcrop.jpg" class="img2" />
         </div>
       </section>
     </main>
