--- a/explore.html
+++ b/explore.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <a href="index.html"> <img class="logo" src="images/logo.svg" alt="Community Science Museum" /></a>
-      <a href="index.html">Community Science Museum</a>
+      <a href="index.html" class="csm">Community Science Museum</a>
       <input type="checkbox" id="hamburger"/>
       <label for="hamburger"><i class="fas fa-bars"></i></label>
  
