testin quality and resolution on webp

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -52,7 +52,7 @@
         Follow the journey of our solar exploration: from early Arab traders, to Galileo’s telescope, to the latest exploration of the planets in our solar
         system.
       </p>
-      <img src="images/cosmos.jpg" class="heading-img" />
+      <img src="images/cosmos.webp" class="heading-img" />
       <div class="arrow-down"></div>
     </section>
     <main>
@@ -71,7 +71,7 @@
         </div>
         <div class="card" id="biologyandmedicine">
           <h2>Biology and Medicine</h2>
-          <img src="images/biologystatue.jpg" class="img" />
+          <img src="images/biologystatue.webp" class="img" />
           <p>
             From micro-organisms to the human body, major breakthroughs in biology are offering us unique insights into the great wonders of the tiny world.
           </p>
@@ -86,7 +86,7 @@
           </p>
         </div>
         <div class="card" id="roboticsandai">
-          <img src="images/giantant.jpg" class="img" />
+          <img src="images/giantant.webp" class="img" />
           <h2>Robotics and AI</h2>
           <p>
             The information revolution is here and robotics and artificial intelligence are the science of the future. From useful home applications of AI to
