--- a/getinvolved.html
+++ b/getinvolved.html
@@ -50,7 +50,7 @@
         You can also support us by donating items of interest to the museum’s collections. If you have some item or collection that you think others would
         enjoy, please let us know by contacting our Collections Department and they will be able to assist you.
       </p>
-      <img src="images/learn.jpg" class="heading-img" />
+      <img src="images/learn.webp" class="heading-img" />
       <div class="arrow-down"></div>
     </section>
     <main>
