--- a/visit.html
+++ b/visit.html
@@ -57,7 +57,7 @@
             If you would like to organise a guided tour for your group of 6 or more people, please <a href="getinvolved.html#contact">contact</a> us to arrange
             the tour.
           </p>
-          <img src="images/lobby.jpg" class="img" />
+          <img src="images/lobby.webp" class="img" />
         </div>
         <div class="card">
           <h2>Hours</h2>
@@ -80,7 +80,7 @@
             Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to continue to explore science even
             after you’ve left the museum.
           </p>
-          <img src="images/hallcrop.jpg" class="img2" />
+          <img src="images/hallcrop.webp" class="img2" />
         </div>
       </section>
     </main>
