changed all pics to webp format some cropped or redused resolution

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -67,7 +67,7 @@
             Discover the origins of life on this planet and how the species we know today have evolved our time. You can also take some time to meet a few of
             the creatures who didn’t survive, including our Woolly Mammoth, the Dodos, and a number of dinosaurs too.
           </p>
-          <img src="images/skeletons.jpg" class="img" />
+          <img src="images/skeletons.webp" class="img" />
         </div>
         <div class="card" id="biologyandmedicine">
           <h2>Biology and Medicine</h2>
@@ -94,7 +94,7 @@
           </p>
         </div>
         <div class="card" id="ecology">
-          <img src="images/web.jpg" class="img" />
+          <img src="images/web.webp" class="img" />
           <h2>Ecology</h2>
           <p>
             As we learn more and more of the impact humans are having on the planet, the more important it becomes that scientists explore how to create a
