--- a/getinvolved.html
+++ b/getinvolved.html
@@ -50,7 +50,7 @@
         You can also support us by donating items of interest to the museum’s collections. If you have some item or collection that you think others would
         enjoy, please let us know by contacting our Collections Department and they will be able to assist you.
       </p>
-      <img src="images/learn.webp" class="heading-img" />
+      <img src="images/learn2.webp" class="heading-img" />
       <div class="arrow-down"></div>
     </section>
     <main>
@@ -66,11 +66,11 @@
             You can help volunteer in a number of different spheres. Please <a href="getinvolved.html#contact">contact</a> us if you’d like to find out more
             about how you can get involved.
           </p>
-          <img src="images/vrexperience.jpg" class="img" />
+          <img src="images/vrexperience.webp" class="img" />
         </div>
         <div class="card" id="internships">
           <h2>Internships</h2>
-          <img src="images/puzzle.jpg" class="img" />
+          <img src="images/puzzle.webp" class="img" />
           <p>
             Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing the wonders of nature with people? Well you could be just
             the right person to enjoy an internship at the museum.
