--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <h3>News</h3>
       <section>
         <div class="main-card">
-          <img src="images/reading-crop.jpg" />
+          <img src="images/reading-crop.webp" />
           <h3>Visiting Professor of Aeronautics</h3>
           <p>
             It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology will be delivering 3 lectures on the
@@ -61,7 +61,7 @@
           <a href="exhibitions.html" class="cta-card">Read more</a>
         </div>
         <div class="main-card">
-          <img src="images/mammoth.jpg" />
+          <img src="images/mammoth.webp" />
           <h3>Night in the Museum</h3>
           <p>
             Get your family together for an exciting night in the museum as you sleep over beside dinosaurs and science displays. Bring your own sleeping bag
@@ -70,7 +70,7 @@
           <a href="exhibitions.html" class="cta-card">Read more</a>
         </div>
         <div class="main-card">
-          <img src="images/moonphases.jpg" />
+          <img src="images/moonphases.webp" />
           <h3>Energetica Exhibition on Loan</h3>
           <p>
             On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the Community Science Museum. It’s a series of
@@ -81,14 +81,14 @@
         </div>
         <div class="main-card">
           <h2>Explore</h2>
-          <img src="images/scientific.jpg" />
+          <img src="images/scientific.webp" />
           <h3>For kids</h3>
           <p>Are you a young person looking to learn more about science? Come on down to our museum, there’s plenty to see and do.</p>
           <a href="explore.html" class="cta-card">Read more</a>
         </div>
         <div class="main-card">
           <h2>Exhibitions</h2>
-          <img src="images/cosmos.jpg" />
+          <img src="images/cosmos.webp" />
           <h3>Cosmology</h3>
           <p>
             Explore the wonders of our cosmos. Our fantastic exhibition, ‘The Sky Above Us’, explores the night sky and what we can see and know about the
@@ -98,7 +98,7 @@
         </div>
         <div class="main-card">
           <h2>Get involved</h2>
-          <img src="images/learn.jpg" />
+          <img src="images/learn.webp" />
           <h3>Support</h3>
           <p>
             There are various ways you can support the museum. Donations are very welcome and are an important way we keep this museum open and accessible to
@@ -123,7 +123,7 @@
           galaxies far away to the very building blocks of life itself.
         </p>
         <a href="visit.html" class="cta-card">Visit us</a>
-        <img src="images/spacesuit.jpg" class="img2" />
+        <img src="images/spacesuit.webp" class="img2" />
       </div>
     </main>
     <footer>
