--- a/visit.html
+++ b/visit.html
@@ -45,7 +45,7 @@
       <p>The museum is located at [student to include address].</p>
       <h2>Admission</h2>
       <p>The entrance is free for all.</p>
-      <img src="images/museum.jpg" class="heading-img" />
+      <img src="images/museum.webp" class="heading-img" />
       <div class="arrow-down"></div>
     </section>
     <main>
@@ -68,7 +68,7 @@
           <p>Friday: 10:00 – 19:00</p>
           <p>Saturday: 9:00 – 16:00</p>
           <p>Sunday: 9:00 – 13:00</p>
-          <img src="images/library.jpg" />
+          <img src="images/library.webp" />
         </div>
         <div class="card">
           <h2>Accessibility</h2>
