added alt texts

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <input type="checkbox" id="hamburger" />
       <nav class="navigation">
         <ul>
+          <li><a href="index.html" class="nav-heading">Home</a></li>
           <li><a href="explore.html" class="nav-heading">Explore</a></li>
           <li><a href="explore.html" class="sub-heading">For kids</a></li>
           <li><a href="explore.html#teachers" class="sub-heading">For teachers</a></li>
@@ -52,7 +53,7 @@
       <h3>News</h3>
       <section>
         <div class="main-card">
-          <img src="images/reading-crop.webp" />
+          <img src="images/reading-crop.webp" alt="Small boy reading book about aeronautics and space" />
           <h3>Visiting Professor of Aeronautics</h3>
           <p>
             It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology will be delivering 3 lectures on the
@@ -61,7 +62,7 @@
           <a href="exhibitions.html" class="cta-card">Read more</a>
         </div>
         <div class="main-card">
-          <img src="images/mammoth.webp" />
+          <img src="images/mammoth.webp" alt="One of our in-house mammoth skeletons rebuilt in all its glory " />
           <h3>Night in the Museum</h3>
           <p>
             Get your family together for an exciting night in the museum as you sleep over beside dinosaurs and science displays. Bring your own sleeping bag
@@ -70,7 +71,7 @@
           <a href="exhibitions.html" class="cta-card">Read more</a>
         </div>
         <div class="main-card">
-          <img src="images/moonphases.webp" />
+          <img src="images/moonphases.webp" alt="The phases of the moon, solar power reflects of the face of the moon" />
           <h3>Energetica Exhibition on Loan</h3>
           <p>
             On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the Community Science Museum. It’s a series of
@@ -81,14 +82,14 @@
         </div>
         <div class="main-card">
           <h2>Explore</h2>
-          <img src="images/scientific.webp" />
+          <img src="images/scientific.webp" alt="Scientist working in a scientific chamber" />
           <h3>For kids</h3>
           <p>Are you a young person looking to learn more about science? Come on down to our museum, there’s plenty to see and do.</p>
           <a href="explore.html" class="cta-card">Read more</a>
         </div>
         <div class="main-card">
           <h2>Exhibitions</h2>
-          <img src="images/cosmos.webp" />
+          <img src="images/cosmos.webp" alt="One of the many, many galaxies in the vast universe" />
           <h3>Cosmology</h3>
           <p>
             Explore the wonders of our cosmos. Our fantastic exhibition, ‘The Sky Above Us’, explores the night sky and what we can see and know about the
@@ -98,7 +99,7 @@
         </div>
         <div class="main-card">
           <h2>Get involved</h2>
-          <img src="images/learn.webp" />
+          <img src="images/learn.webp" alt="A child reading a mathematic equation on a chalk board" />
           <h3>Support</h3>
           <p>
             There are various ways you can support the museum. Donations are very welcome and are an important way we keep this museum open and accessible to
@@ -108,7 +109,7 @@
         </div>
       </section>
       <div class="main-card" id="exhibits">
-        <img src="images/exhibits.webp" class="img1-1" />
+        <img src="images/exhibits.webp" class="img1-1" alt="A hall full of smaller exhibits" />
         <p class="desktop-p1">
           We believe science should not be confined to the textbook, but brought to live through exhibits. This is why we have over 1000 different exhibits on
           the many varied subjects of science to explore. Many of these exhibits are designed for you to interact with and play around to see science come to
@@ -123,7 +124,7 @@
           galaxies far away to the very building blocks of life itself.
         </p>
         <a href="visit.html" class="cta-card">Visit us</a>
-        <img src="images/spacesuit.webp" class="img2" />
+        <img src="images/spacesuit.webp" class="img2" alt="A complete spacesuit in a space shuttle chair" />
       </div>
     </main>
     <footer>
