--- a/visit.html
+++ b/visit.html
@@ -20,6 +20,7 @@
       <label for="hamburger"><i class="fas fa-bars"></i></label>
       <nav class="navigation">
         <ul>
+          <li><a href="index.html" class="nav-heading">Home</a></li>
           <li><a href="explore.html" class="nav-heading">Explore</a></li>
           <li><a href="explore.html" class="sub-heading">For kids</a></li>
           <li><a href="explore.html#teachers" class="sub-heading">For teachers</a></li>
@@ -42,10 +43,10 @@
     <section class="heading">
       <h1>Visit</h1>
       <h2>Location</h2>
-      <p>The museum is located at [student to include address].</p>
+      <p>The museum is located at Oppspinnveien 1, 0070 Oslo.</p>
       <h2>Admission</h2>
       <p>The entrance is free for all.</p>
-      <img src="images/museum.webp" class="heading-img" />
+      <img src="images/museum.webp" class="heading-img" alt="The colorful exterior of our museum" />
       <div class="arrow-down"></div>
     </section>
     <main>
@@ -57,7 +58,7 @@
             If you would like to organise a guided tour for your group of 6 or more people, please <a href="getinvolved.html#contact">contact</a> us to arrange
             the tour.
           </p>
-          <img src="images/lobby.webp" class="img" />
+          <img src="images/lobby.webp" class="img" alt="A big lobby consisting of big stairs and a floating giant dinosaur skeleton" />
         </div>
         <div class="card">
           <h2>Hours</h2>
@@ -68,7 +69,7 @@
           <p>Friday: 10:00 – 19:00</p>
           <p>Saturday: 9:00 – 16:00</p>
           <p>Sunday: 9:00 – 13:00</p>
-          <img src="images/library.webp" />
+          <img src="images/library.webp" alt="The multistory library where you can also buy food and drink and access our shop" />
         </div>
         <div class="card">
           <h2>Accessibility</h2>
@@ -80,7 +81,7 @@
             Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to continue to explore science even
             after you’ve left the museum.
           </p>
-          <img src="images/hallcrop.webp" class="img2" />
+          <img src="images/hallcrop.webp" class="img2" alt="A big hall in our museum with a big elephant model and more" />
         </div>
       </section>
     </main>
