--- a/exhibitions.html
+++ b/exhibitions.html
@@ -21,6 +21,7 @@
 
       <nav class="navigation">
         <ul>
+          <li><a href="index.html" class="nav-heading">Home</a></li>
           <li><a href="explore.html" class="nav-heading">Explore</a></li>
           <li><a href="explore.html" class="sub-heading">For kids</a></li>
           <li><a href="explore.html#teachers" class="sub-heading">For teachers</a></li>
@@ -52,7 +53,7 @@
         Follow the journey of our solar exploration: from early Arab traders, to Galileo’s telescope, to the latest exploration of the planets in our solar
         system.
       </p>
-      <img src="images/cosmos.webp" class="heading-img" />
+      <img src="images/cosmos.webp" class="heading-img" alt="One of the many, many galaxies in the vast universe" />
       <div class="arrow-down"></div>
     </section>
     <main>
@@ -67,11 +68,11 @@
             Discover the origins of life on this planet and how the species we know today have evolved our time. You can also take some time to meet a few of
             the creatures who didn’t survive, including our Woolly Mammoth, the Dodos, and a number of dinosaurs too.
           </p>
-          <img src="images/skeletons.webp" class="img" />
+          <img src="images/skeletons.webp" class="img" alt="A collection of different humanoid and ape skeletons" />
         </div>
         <div class="card" id="biologyandmedicine">
           <h2>Biology and Medicine</h2>
-          <img src="images/biologystatue.webp" class="img" />
+          <img src="images/biologystatue.webp" class="img" alt="A bust displaying different organs and skeletal construction in the head" />
           <p>
             From micro-organisms to the human body, major breakthroughs in biology are offering us unique insights into the great wonders of the tiny world.
           </p>
@@ -86,7 +87,7 @@
           </p>
         </div>
         <div class="card" id="roboticsandai">
-          <img src="images/giantant.webp" class="img" />
+          <img src="images/giantant.webp" class="img" alt="Giant model of ants, is it Rob the Robot?" />
           <h2>Robotics and AI</h2>
           <p>
             The information revolution is here and robotics and artificial intelligence are the science of the future. From useful home applications of AI to
@@ -94,7 +95,7 @@
           </p>
         </div>
         <div class="card" id="ecology">
-          <img src="images/web.webp" class="img" />
+          <img src="images/web.webp" class="img" alt="A web of sorts, strings connected to eachother" />
           <h2>Ecology</h2>
           <p>
             As we learn more and more of the impact humans are having on the planet, the more important it becomes that scientists explore how to create a
